--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+citus-enterprise (10.2.1.citus-1) stable; urgency=low
+  
+  * Adds missing version-mismatch checks for columnar tables
+  
+  * Adds missing version-mismatch checks for internal functions
+  
+  * Fixes a bug that could cause partition shards being not co-located with
+    parent shards
+  
+  * Fixes a bug that prevents pushing down boolean expressions when using
+    columnar custom scan
+  
+  * Fixes a clog lookup failure that could occur when writing to a columnar table
+  
+  * Fixes an issue that could cause unexpected errors when there is an
+    in-progress write to a columnar table
+  
+  * Revokes read access to `columnar.chunk` from unprivileged user
+  
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 24 Sep 2021 12:11:28 +0000  
+ 
 citus-enterprise (10.1.3.citus-1) stable; urgency=low
 
   * Official 10.1.3 release of Citus Enterprise
