--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (10.2.0.citus-2) stable; urgency=low
+
+  * Official 10.2.0 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 04 Oct 2021 09:37:46 +0000
+
 citus-enterprise (10.2.1.citus-1) stable; urgency=low
   
   * Adds missing version-mismatch checks for columnar tables
