--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.0.3.citus-1) stable; urgency=low
+
+  * Official 10.0.3 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 04 Oct 2021 10:56:20 +0000
+
 citus (10.2.1.citus-1) stable; urgency=low
   
   * Adds missing version-mismatch checks for columnar tables
