--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover-enterprise (10.0.3-1) stable; urgency=low
+
+  * Official 10.0.3 release of Pg Auto Failover Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 04 Oct 2021 11:56:42 +0000
+
 pg-auto-failover-enterprise (1.6.2-2) stable; urgency=low
 
   * Removes encryption from packages
