--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.2.2.citus-1) stable; urgency=low
+
+  * Official 10.2.2 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 14 Oct 2021 13:00:27 +0000
+
 citus (10.2.1.citus-1) stable; urgency=low
   
   * Adds missing version-mismatch checks for columnar tables
