--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (9.2.7.citus-1) stable; urgency=low
+
+  * Official 9.2.7 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 03 Nov 2021 13:36:56 +0000
+
 citus-enterprise (10.2.2.citus-1) stable; urgency=low
 
   * Official 10.2.2 release of Citus Enterprise
