--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (9.2.8.citus-1) stable; urgency=low
+
+  * Official 9.2.8 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 04 Nov 2021 12:45:09 +0000
+
 citus (9.2.7.citus-1) stable; urgency=low
 
   * Official 9.2.7 release of Citus
