--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (9.5.10.citus-1) stable; urgency=low
+
+  * Official 9.5.10 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 08 Nov 2021 14:18:56 +0000
+
 citus (9.2.8.citus-1) stable; urgency=low
 
   * Official 9.2.8 release of Citus
