--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pg-auto-failover (1.6.3-1) stable; urgency=low
+
+  * Official 1.6.3 release of Pg Auto Failover
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 11 Nov 2021 06:28:16 +0000
+
 pg-auto-failover (1.6.2-1) stable; urgency=low
   
   This is a bug fix release for the 1.6 series.
