--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (10.2.3.citus-1) stable; urgency=low
+
+  * Official 10.2.3 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 29 Nov 2021 11:05:18 +0000
+
 citus-enterprise (10.0.6.citus-1) stable; urgency=low
 
   * Official 10.0.6 release of Citus Enterprise
