--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.2.4.citus-1) stable; urgency=low
+
+  * Official 10.2.4 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 01 Feb 2022 12:00:47 +0000
+
 citus (10.1.4.citus-1) stable; urgency=low
 
   * Official 10.1.4 release of Citus
