--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (10.2.4.citus-1) stable; urgency=low
+
+  * Official 10.2.4 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 01 Feb 2022 20:38:59 +0000
+
 citus-enterprise (10.1.4.citus-1) stable; urgency=low
 
   * Official 10.1.4 release of Citus Enterprise
