--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.5.0.citus-1) stable; urgency=low
+
+  * Official 10.5.0 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Tue, 08 Mar 2022 10:34:50 +0000
+
 citus (10.2.4.citus-1) stable; urgency=low
 
   * Official 10.2.4 release of Citus
