--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-citus (10.2.4.citus-1) stable; urgency=low
+citus (10.4.0_beta.citus-1) stable; urgency=low
+
+  * Official 10.4.0_beta release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 09 Mar 2022 13:13:44 +0000
+
+citus (10.2.4-beta.citus-1) stable; urgency=low
 
   * Official 10.2.4 release of Citus
 
