--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.2.4-beta.citus-1) stable; urgency=low
+
+  * Official 10.2.4_beta release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Wed, 09 Mar 2022 13:26:17 +0000
+
 citus (10.2.4.citus-1) stable; urgency=low
 
   * Official 10.2.4 release of Citus
