--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.2.4-beta.citus-1) stable; urgency=low
+
+  * Official 10.2.4-beta release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Sat, 12 Mar 2022 11:40:42 +0000
+
 citus (10.2.4.citus-1) stable; urgency=low
 
   * Official 10.2.4 release of Citus
