--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.2.5.citus-1) stable; urgency=low
+
+  * Official 10.2.5 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 17 Mar 2022 13:18:37 +0000
+
 citus (10.2.4.citus-1) stable; urgency=low
 
   * Official 10.2.4 release of Citus
