--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-citus (11.0.0_beta.citus-1) stable; urgency=low
+citus (11.0.0-beta.citus-1) stable; urgency=low
 
-  * Official 11.0.0_beta release of Citus
+  * Official 11.0.0-beta release of Citus
 
  -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 24 Mar 2022 13:33:24 +0000
 
