--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.0.0-beta.citus-1) stable; urgency=low
+
+  * Official 11.0.0-beta release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Thu, 24 Mar 2022 13:33:24 +0000
+
 citus (10.2.5.citus-1) stable; urgency=low
 
   * Official 10.2.5 release of Citus
