--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (1.0.1_beta.citus-1) stable; urgency=low
+
+  * Official 1.0.1_beta release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 11 Apr 2022 14:08:26 +0000
+
 citus (11.0.0-beta.citus-1) stable; urgency=low
 
   * Official 11.0.0-beta release of Citus
