--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (10.2.6.citus-1) stable; urgency=low
+
+  * Official 10.2.6 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 20 May 2022 12:06:44 +0000
+
 citus-enterprise (11.0.1-beta.citus-1) stable; urgency=low
 
   * Official 11.0.1-beta release of Citus Enterprise
