--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (10.1.5.citus-1) stable; urgency=low
+
+  * Official 10.1.5 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 20 May 2022 12:49:03 +0000
+
 citus-enterprise (10.2.6.citus-1) stable; urgency=low
 
   * Official 10.2.6 release of Citus Enterprise
