--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (9.5.11.citus-1) stable; urgency=low
+
+  * Official 9.5.11 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 23 May 2022 08:23:47 +0000
+
 citus-enterprise (10.0.7.citus-1) stable; urgency=low
 
   * Official 10.0.7 release of Citus Enterprise
