--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (9.2.9.citus-1) stable; urgency=low
+
+  * Official 9.2.9 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 23 May 2022 10:55:42 +0000
+
 citus-enterprise (9.3.6.citus-1) stable; urgency=low
 
   * Official 9.3.6 release of Citus Enterprise
