--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus-enterprise (9.0.3.citus-1) stable; urgency=low
+
+  * Official 9.0.3 release of Citus Enterprise
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 23 May 2022 14:44:59 +0000
+
 citus-enterprise (9.1.3.citus-1) stable; urgency=low
 
   * Official 9.1.3 release of Citus Enterprise
