--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (11.0.5.citus-1) stable; urgency=low
+
+  * Official 11.0.5 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Mon, 01 Aug 2022 11:06:46 +0000
+
 citus (11.0.4.citus-1) stable; urgency=low
 
   * Official 11.0.4 release of Citus
