--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+citus (10.2.7.citus-1) stable; urgency=low
+
+  * Official 10.2.7 release of Citus
+
+ -- Gurkan Indibay <gindibay@microsoft.com>  Fri, 19 Aug 2022 09:53:46 +0000
+
 citus (11.0.5.citus-1) stable; urgency=low
 
   * Official 11.0.5 release of Citus
